get first instead of get(0)